--- a/e2.html
+++ b/e2.html
@@ -1,26 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Document</title>
 </head>
+
 <body>
   <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-    <div id="main" style="width: 600px;height:400px;"></div>
-    <script src="js/echarts.js "></script>
-    <script src="js/china.js "></script>
+  <div id="main" style="width: 600px;height:400px;"></div>
+  <img id="img1" style="width: 600px;height:400px;">====</div>
+
+  <script src="js/echarts.js "></script>
+  <script src="js/china.js "></script>
+  <script src="js/jquery-1.9.1.min.js "></script>
 
 
-
-    <script>
+  <script>
+    //alert('cool');
     var myChart = echarts.init(document.getElementById('main'));
     myChart.title = '坐标轴刻度与标签对齐';
-    </script>
+  </script>
 
-    <script src="my_js/pie.js "></script>    
+  <script src="my_js/pie1.js "></script>
 
-    <script>
+  <script>
+    //alert('cool2');
     myChart.setOption(option)
-    </script>
+    var img = myChart.getDataURL();
+    //alert(img);
+
+
+    //$('#img1').attr('src', img); //设置重新展现出来！
+    //alert($("#img1").attr('src'));
+
+    //alert('cool!');
+    if (img) {　　
+      $.ajax({　　　　
+        type: "post",
+        data: {　　　　　　
+          baseimg: img　　　　
+        },
+        url: 'http://127.0.0.1:4567',
+        async: true,
+        success: function(data) {　　　　　　
+          console.log(img);　　　　
+        },
+        error: function(err) {　　　　　　
+          console.log('图片保存失败');　　　　　　
+          alert('图片保存失败');　　　　
+        }　　
+      });
+    }
+  </script>
+
+
 </body>
+
 </html>
