--- a/e2.html
+++ b/e2.html
@@ -39,7 +39,8 @@
       $.ajax({　　　　
         type: "post",
         data: {　　　　　　
-          baseimg: img　　　　
+          baseimg: img,
+          file_name: 'hello.png'
         },
         url: 'http://127.0.0.1:4567',
         async: true,
