--- a/e2.html
+++ b/e2.html
@@ -9,7 +9,7 @@
 <body>
   <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
   <div id="main" style="width: 600px;height:400px;"></div>
-  <img id="img1" style="width: 600px;height:400px;">====</div>
+  <!-- <img id="img1" style="width: 600px;height:400px;">====</div> -->
 
   <script src="js/echarts.js "></script>
   <script src="js/china.js "></script>
@@ -20,41 +20,14 @@
     //alert('cool');
     var myChart = echarts.init(document.getElementById('main'));
     myChart.title = '坐标轴刻度与标签对齐';
+    file = 'hhh'
+    file_name = file + '.png'
+    
   </script>
 
-  <script src="my_js/pie1.js "></script>
+  <script src= "my_js/hhh.js" ></script>
 
-  <script>
-    //alert('cool2');
-    myChart.setOption(option)
-    var img = myChart.getDataURL();
-    //alert(img);
-
-
-    //$('#img1').attr('src', img); //设置重新展现出来！
-    //alert($("#img1").attr('src'));
-
-    //alert('cool!');
-    if (img) {　　
-      $.ajax({　　　　
-        type: "post",
-        data: {　　　　　　
-          baseimg: img,
-          file_name: 'hello.png'
-        },
-        url: 'http://127.0.0.1:4567',
-        async: true,
-        success: function(data) {　　　　　　
-          console.log(img);　　　　
-        },
-        error: function(err) {　　　　　　
-          console.log('图片保存失败');　　　　　　
-          alert('图片保存失败');　　　　
-        }　　
-      });
-    }
-  </script>
-
+  <script src="js/save.js "></script>
 
 </body>
 
