--- a/server/public/e2.html
+++ b/server/public/e2.html
@@ -8,10 +8,11 @@
 
 <body>
   <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-  <div id="main" style="width: 600px;height:400px;"></div>
-  <!-- <img id="img1" style="width: 600px;height:400px;">====</div> -->
+  <div id="main" style="width: 600px;height:400px;background-color:#ff;" ></div>
+  
 
   <script src="js/echarts.js "></script>
+  
   <script src="js/china.js "></script>
   <script src="js/jquery-1.9.1.min.js "></script>
 
@@ -19,15 +20,23 @@
   <script>
     //alert('cool');
     var myChart = echarts.init(document.getElementById('main'));
-    myChart.title = '坐标轴刻度与标签对齐';
-    file = 'hhh'
-    file_name = file + '.png'
+    //myChart.title = '坐标轴刻度与标签对齐';
     
+    file = 'hhh';
+    file_name = file + '.png';
+
+   
+    //myChart.setOption(option);
+
   </script>
+
 
   <script src= "my_js/hhh.js" ></script>
 
+ 
   <script src="js/save.js "></script>
+  
+
 
 </body>
 
