--- a/server/public/clfb.html
+++ b/server/public/clfb.html
@@ -22,7 +22,7 @@
     var myChart = echarts.init(document.getElementById('main'));
     //myChart.title = '坐标轴刻度与标签对齐';
     
-    file = 'hhh';
+    file = 'clfb';
     file_name = file + '.png';
 
    
@@ -31,7 +31,7 @@
   </script>
 
 
-  <script src= "my_js/hhh.js" ></script>
+  <script src= "my_js/clfb.js" ></script>
 
  
   <script src="js/save.js "></script>
