--- a/server/public/clfb.html
+++ b/server/public/clfb.html
@@ -22,7 +22,7 @@
     var myChart = echarts.init(document.getElementById('main'));
     //myChart.title = '坐标轴刻度与标签对齐';
     
-    file = 'clfb';
+    file = 'liuxiang/clfb';
     file_name = file + '.png';
 
    
