--- a/server/public/w_t1_2.html
+++ b/server/public/w_t1_2.html
@@ -22,7 +22,7 @@
     var myChart = echarts.init(document.getElementById('main'));
     //myChart.title = '坐标轴刻度与标签对齐';
     
-    file = 'w_t1_2';
+    file = 'liuxiang/w_t1_2';
     file_name = file + '.png';
 
    
